--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -8,3 +8,8 @@ $gutter: 1rem; //for primeflex grid system
 @import 'primevue/resources/themes/lara-light-blue/theme.css';
 @import 'primeflex/primeflex.scss';
 @import 'primeicons/primeicons.css';
+
+.p-multiselect .p-multiselect-label.p-placeholder {
+  font-weight: bold;
+  color: #000000;
+}
