--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -9,7 +9,8 @@ $gutter: 1rem; //for primeflex grid system
 @import 'primeflex/primeflex.scss';
 @import 'primeicons/primeicons.css';
 
-.p-multiselect .p-multiselect-label.p-placeholder {
+.p-multiselect {
+  border-color: var(--color);
+  border-width: 2px;
   font-weight: bold;
-  color: #000000;
 }
